--- a/resources/assets/sass/ui/dashboard/_content.scss
+++ b/resources/assets/sass/ui/dashboard/_content.scss
@@ -70,6 +70,18 @@
   margin-left: 5rem;
   margin-bottom: 5rem;
 
+  &.dashboard-content-paid {
+    width: calc(100% - 50px);
+
+    @media(min-width: 700px) {
+      width: calc(100% - 150px);
+    }
+
+    @media(max-width: 600px) {
+      width: 100%;
+    }
+  }
+
   &.opacity-on-load {
     transition: opacity 450ms ease-in-out;
     opacity: 0;
